Enhance agent session management and setup scripts
- Updated `.gitignore` to include agent session files for better management.
- Modified `.mcp.json` to reflect new paths for the agent runtime.
- Introduced `setup.sh` for streamlined agent setup, including validation checks and configuration generation.
- Added `start-agent` script to initiate the agent with specified directory.
- Updated `package.json` for the agent-runtime-mcp to version 2.0.0, enhancing features like session persistence and live visualizer.
- Removed outdated `setup.sh` from `agent-runtime-mcp` and added a new visualizer HTML for better user experience.

--- a/.gitignore
+++ b/.gitignore
@@ -54,6 +54,11 @@ venv/
 # Thumbnails
 ._*
 
+# Agent session (copies)
+agent-session/agent/
+agent-session/CLAUDE.md
+agent-session/visualizer-mermaid-debug.txt
+
 # Cursor / local tools
 .cursor/
 .codex/
